# densedisk

./: .gitignore  README.md  disk.py  pyproject.toml
ancillary/: Ntau1_T_12CO_J2-1.txt  hd163296_exponential.npy
ancillary/radial_profiles/: HD163296_13CO.robust_0.5_ideal.npz  HD163296_C18O.robust_0.5_ideal.npz  HD163296_CO.robust_0.5_ideal.npz  velocity_curve_13CO_iters5_fitmethodSHO.npz  velocity_curve_C18O_iters5_fitmethodSHO.npz  velocity_curve_CO_iters5_fitmethodSHO.npz
densedisk/: diskmodel.py  example_run.py  plot_settings.py  temperature.py
densedisk/mcmc_trials/: mcmc_testing_notebook.ipynb  mcmc_velocity_profile.py  run_mcmc_velocity.py  run_mcmc_velocity_13CO.py  velocity_mcmc_results.ipynb  velocity_mcmc_results_13CO.ipynb  velocity_plotting_functions.py
notebooks/: VelocityExtractionExample.ipynb
