[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "densedisk"
version = "0.1.0"
description = "A Python library for dense disk operations."
authors = [
    { name = "Jea Redai", email = "redaijea@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["disk", "dense", "library"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "astropy",
    "scipy"
]

[project.urls]
Homepage = "https://github.com/jeaadams/densedisk"
